src/App.css
body{
  overflow-x: hidden;
}


/** Ensures image stays at the exact size to fill the users
    browser window if they are scrolled to the top of the screen*/
.backgroundImage{
  width: 100vw;
  height: 100vh;
  min-height: 700px;
  max-height: 100vh;
  object-fit: cover;
}

.introText{
  position: absolute;
  color: white;
  padding-top: 40vh;
  font-size: 35px;
  font-family: "Helvetica";
  max-width: 75vw;
}

@media only screen and (max-height:500px){
  .introText{
    padding-top: 300px;
  }
}

@media only screen and (max-width:1000px){
  .introText{
    font-size: 25px;
  }
}

@media only screen and (max-width:800px), (max-height:800px){
  .introText{
    font-size: 22px;
  }
}

@media only screen and (max-width:700px){
  .introText{
    font-size: 20px;
  }
}


.navText span:hover{
  text-decoration: underline;
  color: white;
}

.summaryText{
  position: relative;
  top: 50px;
}

.imageTextContainer{
  position: relative;
}

.oldImageSpan{
  color: white;
  font: bold 45px Helvetica;
  letter-spacing: px;
  background: rgb(0,0,0);
  background: rgba(0,0,0,0.7);
}

.anchor{
  font-size: 0px;
}

.skillCategoryTitle{
  font-size: 16px;
  font-weight: bold;
}

.skillCategoryText{
  font-size: 14px;
}

.whiteText{
  color: white;
}

.summaryTitle{
  font-weight: bold;
}

.summaryLogo{
  filter: grayscale(100%) invert(1);
  padding-top: 25%;
  opacity: 0.8;
}

.footerSmall{
  position: fixed;
  bottom: 0;
  width: 100%;
}

.tableImageWithLink{
  max-width: 50%;
  cursor: pointer;
}

.tableImageNoLink{
  max-width: 50%;
  filter: grayscale;
  opacity: 0.2;

}

.blackBackground{
  background-color: rgb(0,0,0);
}

.text{
  font: 22px Helvetica;
}

.smText{
  font: 18px Helvetica;
}

.padding25{
  padding-bottom: 25px;
}

.padding50{
  padding-bottom: 50px;
}

.padding100{
  padding-bottom: 100px;
}

.componentTitle{
  text-decoration: underline;
  font-size: 25px;
  font-weight: bold;
}

ul{
  list-style-type: circle;
  padding-left: 20px;
}

